# fusion-rs-rev

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  HEALTH.md  README-Docker.md  README.md  build-multiarch.sh  build.rs  docker-bake.hcl  docker-compose.prod.yml  docker-compose.yml  mise.toml
.githooks/: pre-commit
.github/workflows/: docker-build.yml  pr-check.yml  security-audit.yml
.kiro/specs/advanced-logger/: design.md  requirements.md  tasks.md
.kiro/specs/axum-integration/: design.md  requirements.md  tasks.md
.kiro/specs/cli-arguments/: design.md  requirements.md  tasks.md
.kiro/specs/config-management/: design.md  requirements.md  tasks.md
.kiro/specs/diesel-user-integration/: design.md  requirements.md  tasks.md
.kiro/specs/error-handling-redesign/: design.md  requirements.md  tasks.md
config/: default.toml  development.toml  production.toml
docs/: diesel-derive-enum.md  error_handling_guide.md  job-design.md  notification-design.md  project-structure.md
fusion-macros/: Cargo.toml  QUICK_REFERENCE.md
fusion-macros/examples/: usage.rs
fusion-macros/src/: lib.rs
macros/: Cargo.toml  IMPLEMENTATION.md  README.md
macros/src/: lib.rs
macros/tests/: compile_fail.rs
macros/tests/ui/: fail_invalid_name_type.rs  fail_invalid_name_type.stderr  fail_invalid_ttl_type.rs  fail_invalid_ttl_type.stderr  fail_missing_name.rs  fail_missing_name.stderr  fail_unknown_attribute.rs  fail_unknown_attribute.stderr
migrations/2025-12-25-115305-0000_create_users/: down.sql  up.sql
migrations/2026-01-03-031845-0000_create_notification_tables/: down.sql  up.sql
migrations/2026-01-03-110325-0000_create_jobs_tables/: down.sql  up.sql
scripts/: build-docker.sh  healthcheck.sh  setup-hooks.sh
src/: cli.rs  lib.rs  main.rs  schema.rs  server.rs  state.rs
src/api/: doc.rs  mod.rs  routes.rs
src/api/dto/: auth.rs  error.rs  health.rs  job.rs  live.rs  mod.rs  notification.rs  pagination.rs  user.rs
src/api/handlers/: auth.rs  health.rs  jobs.rs  live.rs  me.rs  mod.rs  notifications.rs  users.rs
src/api/middleware/: auth.rs  error_handler.rs  logging.rs  mod.rs  request_id.rs
src/cache/: disk.rs  error.rs  macros.rs  manager.rs  memory.rs  mod.rs  noop.rs  redis.rs  traits.rs
src/cli/: config_merger.rs  executor.rs  mod.rs  parser.rs  validation.rs
src/cli/handlers/: migrate.rs  mod.rs  serve.rs
src/config/: environment.rs  error.rs  loader.rs  mod.rs  settings.rs  validation.rs
src/db/: mod.rs  pool.rs
src/error/: app_error.rs  constraint_parser.rs  database_converter.rs  mod.rs
src/jobs/: error.rs  executor.rs  mod.rs  models.rs  registry.rs  scheduler.rs  types.rs
src/jobs/tasks/: data_cleanup.rs  mod.rs
src/logger/: compression.rs  config.rs  error.rs  mod.rs  rotation.rs  tests.rs  writer.rs
src/models/: mod.rs  notification.rs  user.rs
src/repositories/: job_execution_repo.rs  job_repo.rs  mod.rs  notification_channel_repo.rs  notification_log_repo.rs  user_repo.rs
src/services/: job_service.rs  live_service.rs  mod.rs  user_service.rs
src/services/notifications/: bark_provider.rs  mod.rs  notification_service.rs  provider.rs  webhook_provider.rs
src/utils/: jwt.rs  mod.rs  password.rs  validate.rs
