[package]
name = "fusion-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.3", features = ["postgres", "chrono"] }
diesel-async = { version = "0.7", features = ["postgres", "bb8", "migrations"] }
diesel_migrations = { version = "2.3" }
thiserror = "2.0"
config = { version = "0.15", features = ["toml"] }
uuid = { version = "1.0", features = ["v4"] }

# Core logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
anyhow = "1.0"

# Time and serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Compression support
flate2 = "1.0"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"
filetime = "0.2"
