[package]
name = "fusion-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-full"] }
diesel = { version = "2.3", features = ["postgres", "chrono"] }
# Static linking for PostgreSQL and OpenSSL
pq-sys = { version = "0.7", features = ["bundled"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
diesel-async = { version = "0.7", features = ["postgres", "bb8", "migrations"] }
diesel_migrations = { version = "2.3" }
thiserror = "2.0"
config = { version = "0.15", features = ["toml"] }
uuid = { version = "1.0", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }

reqwest = { version = "0.12", features = ["rustls-tls", "rustls-tls-native-roots", "stream", "json", "deflate", "gzip", "brotli", "zstd", "socks", "cookies", "charset", "http2", "system-proxy"], default-features = false}

# Core logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
anyhow = "1.0"

# Time and serialization
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { version = "1.0", default-features = false, features = ["std", "perf", "unicode-perl"] }

# Compression support
flate2 = "1.0"
# Encryption
argon2 = { version = "0.6.0-rc", features = ["getrandom"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }

# utoipa
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
shadow-rs = { version = "1.5", default-features = false }

[build-dependencies]
shadow-rs = "1.5"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"
filetime = "0.2"
toml = "0.9"
